ncc/testsuite/negative/properties2.n

public class LocalContext
  {
    Foo : int {
      public get { 4 } // E: accessor is more accessible than containing entity
      private set { _ = value; } 
    }
  }
